added in additional coloring and css options

--- a/gui/css/app.css
+++ b/gui/css/app.css
@@ -1,2 +1,5 @@
 @import url("reset.css");
 @import url("layout.css");
+@import url("coloring.css");
+@import url("text_positioning.css");
+@import url("text_styling.css");
